network_security/istio_auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: "back-end"
spec:
  mtls:
    mode: STRICT
