network_security/green_pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: green-pod
  name: green-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-pod
  template:
    metadata:
      labels:
        app: green-pod
    spec:
      containers:
      - image: percona:latest
        name: green-pod
        command:
        - "/bin/sh"
        - "-c"
        - "mysql -h $HOST -u $USER -p$PASSWORD -e 'USE eks; SELECT * FROM welcome;' && sleep 604800"
