network_security/istio_backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: back-end
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: back-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: in28min/hello-world-rest-api:0.0.1.RELEASE
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - name: liveness-port
          containerPort: 8080
          hostPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 400m
            memory: 1024Mi #256Mi 
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 1
          periodSeconds: 10
          initialDelaySeconds: 30
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: back-end
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: api
